# spec/backend-api.openapi.json
@@ -5780,7 +5780,9 @@
           "200": {
             "content": {
               "application/json": {
-                "schema": {}
+                "schema": {
+                  "$ref": "#/components/schemas/IncidentBundleJson"
+                }
               },
               "application/vnd.earshot.incident+json": {
                 "schema": {
